# config-loader

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_CN.md
.github/workflows/: ci.yml
cmake/: ThirdParty.cmake
examples/: ReflectStruct.cpp
include/config-loader/: ConfigLoader.h  ConfigLoaderBuilder.h  ConfigLoaderNS.h  DefineStruct.h  Deserializable.h  DeserializeTraits.h  DeserializeTraitsDecl.h  ForEachField.h  PathString.h  ReflectedTraits.h  Result.h  TinyXML2DeserializeTraits.h
include/config-loader/concept/: Basic.h  Parser.h
include/config-loader/core/: DefineSchema.h  DefineStruct.h  ForEachField.h  ReflectedTraits.h
include/config-loader/deserialize/: CommonDeserializeTraits.h  CompoundDeserializeTraits.h  Deserializable.h  DeserializeTraits.h  DeserializeTraitsDecl.h  Deserializer.h  NonTrivialDeserializeTraits.h  PrimitiveDeserializeTraits.h  TrivialDeserializeTraits.h
include/config-loader/deserialize/tinyxml2/: TinyXML2Adapter.h  TinyXML2DeserializeTraits.h
include/config-loader/parsers/: JsonCppParser.h  TinyXML2Parser.h  UnsupportedParser.h  YamlCppParser.h
include/config-loader/serialize/: CompoundSerializeTraits.h  PrimitiveSerializeTraits.h  SerializeTraits.h  SerializeTraitsDecl.h  Serializer.h  TypeSerializer.h
include/config-loader/utils/: Assertion.h  CommonTraits.h  ConfigPath.h  ConstexprStringUtils.h  ContentLoader.h  Log.h  RepeatMacro.h
src/utils/: ConfigPath.cpp  GetFileContent.cpp
test/ut/: CMakeLists.txt  CatchMain.cpp  ConfigPathTest.cpp  ConstexprStringTest.cpp  ContentLoaderTest.cpp  DeserializableTest.cpp  DeserializeConfig.h  DeserializeJsonConfig.h  DeserializeJsonCppConfig.h  DeserializeXMLConfig.h  DeserializerTest.cpp  JsonCppDeserializeTest.cpp  JsonCppTest.cpp  MixinDeserializeTest.cpp  PathStringTest.cpp  ReflectMacroTest.cpp  ReflectedStruct.h  ResultChecking.cpp  SerializerTest.cpp  TinyXML2DeserializeTest.cpp  TinyXML2Test.cpp  TypeSerializerTest.cpp  UTSchema.h  UtilsTest.cpp  YamlCppDeserializeTest.cpp  YamlCppTest.cpp
test/ut/configs/: Point.xml  Rect.xml  SomeOfPoints.xml
test/ut/configs/json/: Point.json  Rect.json  STLObj.json  SomeOfPoints.json  Tree.json
test/ut/configs/xml/: Point.xml  Rect.xml  STLObj.xml  SomeOfPoints.xml  Tree.xml
test/ut/configs/yml/: Point.yml  Rect.yml  STLObj.yml  SomeOfPoints.yml  Tree.yml
